--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.divudi</groupId>
-    <artifactId>rh</artifactId>
-    <version>3.0.0</version>
+    <groupId>com.example</groupId>
+    <artifactId>myproject</artifactId>
+    <!--<version>3.0.0</version> -->
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>rh</name>
     
@@ -367,19 +368,19 @@
 
     
     <build>
-        <plugins>
-            <!-- Maven Compiler Plugin for JDK 11 with Java 8 Compatibility -->
+       <!-- <plugins>
+            <!-- Maven Compiler Plugin for JDK 11 with Java 8 Compatibility ->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>8</release> <!-- Compile with Java 8 compatibility -->
+                    <release>8</release> <!-- Compile with Java 8 compatibility ->
                     <debug>false</debug>
                 </configuration>
             </plugin>
 
-            <!-- Maven WAR Plugin -->
+            <!-- Maven WAR Plugin ->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -389,12 +390,30 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Dependency Plugin -->
+         
+
+            <!-- Maven Dependency Plugin ->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>3.1.2</version>
-                <!-- Any specific configurations related to your project dependencies -->
+                <!-- Any specific configurations related to your project dependencies ->
+            </plugin>
+        </plugins> -->
+             <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
             </plugin>
         </plugins>
     </build>
