--- a/pom.xml
+++ b/pom.xml
@@ -177,11 +177,19 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
-        <dependency>
+        <!-- <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.4.0</version>
+            <version>8.0.30</version>
+            <scope>runtime</scope>
+        </dependency> -->
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.21.12</version>  <!-- Use the latest stable version -->
         </dependency>
+
 
 
         <!-- OpenPDF -->
